--- a/vaadin-crm/pom.xml
+++ b/vaadin-crm/pom.xml
@@ -149,7 +149,14 @@
     <artifactId>jaxb-api</artifactId>
     <version>2.2.4</version>
 </dependency>
-
+<dependency>
+  <groupId>org.springframework.security</groupId>
+  <artifactId>spring-security-web</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.springframework.security</groupId>
+  <artifactId>spring-security-config</artifactId>
+</dependency>
 <dependency>
     <groupId>com.sun.xml.bind</groupId>
     <artifactId>jaxb-core</artifactId>
